Fix protos for binary compatability
git-svn-id: https://svn.aros.org/svn/aros/trunk@25457 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/Networking/Stacks/AROSTCP/miamipanel/miamipanel.conf
+++ b/contrib/Networking/Stacks/AROSTCP/miamipanel/miamipanel.conf
@@ -6,18 +6,18 @@ version 1.0
 ##begin cdef
 ##end cdef
 ##begin functionlist
-BOOL MiamiPanelInit(IPTR callback1, IPTR callback2, int showflags, int font, int unknown, int panelx, int panely, int guimask) (A0, A1, D0, D1, D2, D3, D4, D5)
+LONG MiamiPanelInit(IPTR synccb, IPTR asynccb, LONG  flags, STRPTR font, STRPTR screen, LONG xo, LONG yo, ULONG sigbit) (A0, A1, D0, A2, A3, D1, D2, A4)
 void MiamiPanelCleanup() ()
-void MiamiPanelAddInterface(int if_index, char *ifname, int ifstate, int secs, int ifspeed) (D0, A0, D1, D2, D3)
-void MiamiPanelDelInterface(int if_index, char *ifname, int ifstate, int secs, int ifspeed) (D0, A0, D1, D2, D3)
-void MiamiPanelSetInterfaceState(int if_index, int state, int secs) (D0, D1, D2)
-void MiamiPanelSetInterfaceSpeed(int if_index, int ifspeed) (D0, D1)
-void MiamiPanelInterfaceReport(int if_index, char *ifname, int ifstate, int secs, int ifspeed) (D0, A0, D1, D2, D3)
-void MiamiPanelToFront(int if_index, char *ifname, int ifstate, int secs, int ifspeed) (D0, A0, D1, D2, D3)
-void MiamiPanelInhibitRefresh(BOOL inhibit) (D0)
-void MiamiPanelGetCoord(int if_index, char *ifname, int ifstate, int secs, int ifspeed) (D0, A0, D1, D2, D3)
-void MiamiPanelEvent(int signal) (D0)
-void MiamiPanelRefreshName(int if_index, char *ifname, int ifstate, int secs, int ifspeed) (D0, A0, D1, D2, D3)
-ULONG MiamiPanelGetVersion() ()
-void MiamiPanelKill(int if_index, char *ifname, int ifstate, int secs, int ifspeed) (D0, A0, D1, D2, D3)
+void MiamiPanelAddInterface(LONG unit, STRPTR name, LONG state, LONG ontime, STRPTR speed) (D0, A0, D1, D2, A1)
+void MiamiPanelDelInterface(LONG unit) (D0)
+void MiamiPanelSetInterfaceState(LONG unit, LONG state, LONG ontime) (D0, D1, D2)
+void MiamiPanelSetInterfaceSpeed(LONG unit, UBYTE * speed) (D0, A0)
+void MiamiPanelInterfaceReport(LONG unit, LONG rate, LONG now, LONG totalhi, ULONG totallo) (D0, D1, D2, D3, D4)
+void MiamiPanelToFront() ()
+void MiamiPanelInhibitRefresh(LONG val) (D0)
+void MiamiPanelGetCoord(LONG * xp, LONG * yp) (A0, A1)
+void MiamiPanelEvent(ULONG sigs) (D0)
+void MiamiPanelRefreshName(LONG unit, UBYTE * name) (D0, A0)
+LONG MiamiPanelGetVersion() ()
+ULONG MiamiPanelKill() ()
 ##end functionlist
