empty Keyboard class. Will be populated with the code very soon
git-svn-id: https://svn.aros.org/svn/aros/trunk@25599 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/USB/classes/HID/hid.conf
+++ b/contrib/necessary/USB/classes/HID/hid.conf
@@ -27,6 +27,7 @@ Dispose
 .interface Hidd_USBHID
 GetReportDescriptor
 GetHidDescriptor
+SetIdle
 ParseReport
 ##end methodlist
 
@@ -44,6 +45,26 @@ classid			CLID_Hidd_USBMouse
 superclass		CLID_Hidd_USBHID
 classptr_field		sd.mouseClass
 classdatatype		MouseData
+initpri			-1
+##end config
+
+##begin methodlist
+.interface Root
+New
+Dispose
+.interface Hidd_USBHID
+ParseReport
+##end methodlist
+##end class
+
+##begin class
+##begin config
+basename 		USBKbd
+type			hidd
+classid			CLID_Hidd_USBKeyboard
+superclass		CLID_Hidd_USBHID
+classptr_field		sd.kbdClass
+classdatatype		KbdData
 initpri			-1
 ##end config
 
