Fixup most of the MUI.MiamiPanel code (shouldnt crash arostcp anymore)
git-svn-id: https://svn.aros.org/svn/aros/trunk@25609 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/Networking/Stacks/AROSTCP/MUI.MiamiPanel/MUI.MiamiPanel.conf
+++ b/contrib/Networking/Stacks/AROSTCP/MUI.MiamiPanel/MUI.MiamiPanel.conf
@@ -1,9 +1,11 @@
 ##begin config
 basename MiamiPanel
 libbase MiamiPanelBase
+libbasetype struct MiamiPanelBase_intern
 version 4.51
 ##end config
 ##begin cdef
+#include "muimiamipanel_intern.h"
 ##end cdef
 ##begin functionlist
 LONG MiamiPanelInit(IPTR synccb, IPTR asynccb, LONG  flags, STRPTR font, STRPTR screen, LONG xo, LONG yo, ULONG sigbit) (A0, A1, D0, A2, A3, D1, D2, A4)
