Not working and unusable WiP. The code for ohci splitted between several files (ohciclass handles the driver interface, ohcihub the hub interface and ohcideviceclass the device interface). Added some code and empty skeleton of some methods. This driver does detect (and does BIOS handoff procedure properly) OHCI devices, but cannot do much with them.
git-svn-id: https://svn.aros.org/svn/aros/trunk@25832 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/USB/drivers/OHCI/ohci.conf
+++ b/contrib/necessary/USB/drivers/OHCI/ohci.conf
@@ -31,4 +31,15 @@ CreatePipe
 DeletePipe
 .interface Hidd_USBHub
 GetHubDescriptor
+OnOff
+PortReset
+GetPortStatus
+GetHubStatus
+ClearHubFeature
+SetHubFeature
+ClearPortFeature
+SetPortFeature
+.interface Hidd_USBDrv
+AddInterrupt
+RemInterrupt
 ##end methodlist
