--- a/contrib/necessary/USB/drivers/OHCI/ohci.conf
+++ b/contrib/necessary/USB/drivers/OHCI/ohci.conf
@@ -5,7 +5,7 @@ libbasetype     struct ohcibase
 sysbase_field   sysbase
 seglist_field   seglist
 classptr_field  sd.ohciClass
-classdatatype	OHCIData
+classdatatype	ohci_data_t
 classid         CLID_Drv_USB_OHCI
 superclass      CLID_Hidd_USBHub
 copyright	Copyright (C) 2006-2007 by Michal Schulz
