The first working version of OHCI driver :)
git-svn-id: https://svn.aros.org/svn/aros/trunk@26067 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/USB/drivers/OHCI/ohci.conf
+++ b/contrib/necessary/USB/drivers/OHCI/ohci.conf
@@ -40,6 +40,9 @@ SetHubFeature
 ClearPortFeature
 SetPortFeature
 .interface Hidd_USBDrv
+CreatePipe
+DeletePipe
+ControlTransfer
 AddInterrupt
 RemInterrupt
 ##end methodlist
