Changed include directory for MUI header files from "MUI" to "mui". Reason is that many current MUI applications (simplemail, yam, muibase) want to include from "mui".
git-svn-id: https://svn.aros.org/svn/aros/trunk@26283 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/mui/classes/mailtext/Mailtext_mcp.conf
+++ b/contrib/mui/classes/mailtext/Mailtext_mcp.conf
@@ -8,7 +8,7 @@ classdatatype struct Data
 ##end config
 ##begin cdef
 #include <libraries/mui.h>
-#include <MUI/NList_mcc.h>
+#include <mui/NList_mcc.h>
 #include "Mailtext_private.h"
 #include "aros/Mailtext_mcp_private.h"
 ##end cdef
