--- a/contrib/mui/classes/mailtext/Mailtext_mcc.conf
+++ b/contrib/mui/classes/mailtext/Mailtext_mcc.conf
@@ -8,7 +8,7 @@ classdatatype struct Data
 ##end config
 ##begin cdef
 #include <libraries/mui.h>
-#include <MUI/NList_mcc.h>
+#include <mui/NList_mcc.h>
 #include "AttributesEngine.h"
 #include "Bitfield.h"
 #include "DynStr.h"
