--- a/contrib/emu/e-uae/.uaerc
+++ b/contrib/emu/e-uae/.uaerc
@@ -1,12 +1,12 @@
-amiga.rom_path     = System:Extras/Emu/E-UAE/shared/rom
+amiga.rom_path     = SYS:Extras/Emu/E-UAE/shared/rom
 amiga.use_dither   = false
 cpu_type           = 68020
 chipset            = ecs
 chipmem_size       = 4
 cachesize          = 4096
 fastmem_size       = 8
-filesystem2        = rw,DH0:System:System:Extras/Emu/E-UAE/shared/dir/System,1
-filesystem2        = rw,DH0:Work:System:Extras/Emu/E-UAE/shared/dir/Work,1
+filesystem2        = rw,DH0:System:SYS:Extras/Emu/E-UAE/shared/dir/System,1
+filesystem2        = rw,DH0:Work:SYS:Extras/Emu/E-UAE/shared/dir/Work,1
 gfx_linemode       = double
 kickstart_rom_file = $(FILE_PATH)/amiga-os-310.rom
 kickstart_key_file = $(FILE_PATH)/rom.key
