--- a/contrib/mui/classes/thebar/mcc/button/Makefile
+++ b/contrib/mui/classes/thebar/mcc/button/Makefile
@@ -129,15 +129,15 @@ BINDIR = bin_$(OS)
 
 # target definition
 MCCTARGET = $(BINDIR)/TheButton.mcc
-TESTTARGET= $(BINDIR)/TheButton-Test
 
 # Common compiler/linker flags
 WARN     = -W -Wall -Wwrite-strings
 OPTFLAGS = -O3 -fomit-frame-pointer -funroll-loops
 DEBUG    = -DDEBUG -O0
+DEBUGSYM = -gstabs
 CFLAGS   = -I. -I../../mcp -I../../include $(CPU) $(WARN) $(OPTFLAGS) \
-           $(DEBUG) -g -c
-LDFLAGS  = $(CPU) -nostartfiles
+           $(DEBUG) $(DEBUGSYM) -c
+LDFLAGS  = $(CPU) $(DEBUGSYM) -nostartfiles
 LDLIBS   = -lm
 
 # different options per target OS
@@ -153,8 +153,9 @@ ifeq ($(OS), os4)
 
   # Compiler/Linker flags
   CRT      = newlib
-  CPU      = -mcpu=604e -mmultiple -Wa,-mregnames
-  CFLAGS   += -mcrt=$(CRT) -D__USE_INLINE__ -D__NEW_TIMEVAL_DEFINITION_USED__ -DNO_PPCINLINE_STDARG
+  CPU      = -mcpu=powerpc
+  CFLAGS   += -mcrt=$(CRT) -D__USE_INLINE__ -D__NEW_TIMEVAL_DEFINITION_USED__ \
+              -DNO_PPCINLINE_STDARG -Wa,-mregnames
   LDFLAGS  += -mcrt=$(CRT)
 
   # additional object files required
@@ -189,7 +190,7 @@ ifeq ($(OS), mos)
   OBJDUMP = ppc-morphos-objdump
 
   # Compiler/Linker flags
-  CPU     = -mcpu=750 -mmultiple
+  CPU     = -mcpu=powerpc
   CFLAGS  += -noixemul -DNO_PPCINLINE_STDARG
   LDFLAGS += -noixemul
   LDLIBS  += -ldebug
@@ -225,19 +226,9 @@ MCCOBJS = $(OBJDIR)/library.o \
           $(OBJDIR)/utils.o \
           $(OBJDIR)/Debug.o
 
-TESTOBJS= $(OBJDIR)/TheButton-Test.o \
-          $(OBJDIR)/brc1.o \
-          $(OBJDIR)/build.o \
-          $(OBJDIR)/class.o \
-          $(OBJDIR)/dragbar.o \
-          $(OBJDIR)/scale.o \
-          $(OBJDIR)/spacer.o \
-          $(OBJDIR)/utils.o \
-          $(OBJDIR)/Debug.o
-
 #
 
-all: $(BINDIR) $(OBJDIR) $(MCCTARGET) $(TESTTARGET)
+all: $(BINDIR) $(OBJDIR) $(MCCTARGET)
 
 # make the object directories
 $(OBJDIR):
@@ -264,22 +255,18 @@ $(OBJDIR)/mccclass_68k.o: ../../include/mccclass_68k.c
 
 $(MCCTARGET): $(M68KSTUBS) $(MCCOBJS)
 	@printf '\033[32mLinking \033[1m$@\033[0m\n'
-	@$(CC) $(LDFLAGS) -o $@.debug $(MCCOBJS) $(M68KSTUBS) $(LDLIBS)
-	@$(STRIP) -R .comment -S -o $@ $@.debug
+	@$(CC) $(LDFLAGS) -o $@.debug $(MCCOBJS) $(M68KSTUBS) $(LDLIBS) -Wl,-Map,$@.map
+	@$(STRIP) --preserve-dates -R.comment -R.sdata2 -S -o $@ $@.debug
 
-$(TESTTARGET): $(TESTOBJS)
-	@printf '\033[32mLinking \033[1m$@\033[0m\n'
-	@$(CC) -o $@.debug $(TESTOBJS) $(LDLIBS)
-	@$(STRIP) -R .comment -S -o $@ $@.debug
-
-$(OBJDIR)/library.o: library.c ../../include/mccheader.c \
+$(OBJDIR)/library.o: library.c ../../include/mccinit.c \
   ../../include/mui/TheBar_mcc.h private.h rev.h
 
 #
 
 .PHONY: clean
 clean:
-	-$(RM) $(MCCTARGET) $(MCCTARGET).debug $(TESTTARGET) $(TESTTARGET).debug $(MCCOBJS) $(TESTOBJS) $(M68KSTUBS)
+	-$(RM) $(MCCTARGET) $(MCCTARGET).debug $(MCCTARGET).map
+	-$(RM) $(MCCOBJS) $(M68KSTUBS)
 
 .PHONY: distclean
 distclean: clean
