--- a/contrib/mui/classes/thebar/mcp/Makefile
+++ b/contrib/mui/classes/thebar/mcp/Makefile
@@ -135,9 +135,10 @@ MCCTARGET = $(BINDIR)/TheBar.mcp
 WARN     = -W -Wall -Wwrite-strings
 OPTFLAGS = -O3 -fomit-frame-pointer -funroll-loops
 DEBUG    = -DDEBUG -O0
+DEBUGSYM = -gstabs
 CFLAGS   = -I. -I../include $(CPU) $(WARN) $(OPTFLAGS) \
-           $(DEBUG) -g -c
-LDFLAGS  = $(CPU) -nostartfiles
+           $(DEBUG) $(DEBUGSYM) -c
+LDFLAGS  = $(CPU) $(DEBUGSYM) -nostartfiles
 LDLIBS   = -lm
 
 # different options per target OS
@@ -153,8 +154,9 @@ ifeq ($(OS), os4)
 
   # Compiler/Linker flags
   CRT      = newlib
-  CPU      = -mcpu=604e -mmultiple -Wa,-mregnames
-  CFLAGS   += -mcrt=$(CRT) -D__USE_INLINE__ -D__NEW_TIMEVAL_DEFINITION_USED__ -DNO_PPCINLINE_STDARG
+  CPU      = -mcpu=powerpc
+  CFLAGS   += -mcrt=$(CRT) -D__USE_INLINE__ -D__NEW_TIMEVAL_DEFINITION_USED__ \
+              -DNO_PPCINLINE_STDARG -Wa,-mregnames
   LDFLAGS  += -mcrt=$(CRT)
 
   # additional object files required
@@ -196,7 +198,7 @@ ifeq ($(OS), mos)
   OBJDUMP = ppc-morphos-objdump
 
   # Compiler/Linker flags
-  CPU     = -mcpu=750 -mmultiple
+  CPU     = -mcpu=powerpc
   CFLAGS  += -noixemul -DNO_PPCINLINE_STDARG
   LDFLAGS += -noixemul
   LDLIBS  += -ldebug
@@ -233,7 +235,8 @@ MCCOBJS = $(OBJDIR)/library.o \
 
 # available catalog translations
 CATALOGS = $(LOCALE)/deutsch.catalog \
-           $(LOCALE)/francais.catalog
+           $(LOCALE)/francais.catalog \
+			  $(LOCALE)/svenska.catalog
 
 #
 
@@ -268,10 +271,10 @@ $(LOCALE)/%.catalog: $(LOCALE)/%.ct
 
 $(MCCTARGET): $(M68KSTUBS) $(MCCOBJS)
 	@printf '\033[32mLinking \033[1m$@\033[0m\n'
-	@$(CC) $(LDFLAGS) -o $@.debug $(MCCOBJS) $(M68KSTUBS) $(LDLIBS)
-	@$(STRIP) -R .comment -S -o $@ $@.debug
+	@$(CC) $(LDFLAGS) -o $@.debug $(MCCOBJS) $(M68KSTUBS) $(LDLIBS) -Wl,-Map,$@.map
+	@$(STRIP) --preserve-dates -R.comment -R.sdata2 -S -o $@ $@.debug
 
-$(OBJDIR)/library.o: library.c ../include/mccheader.c \
+$(OBJDIR)/library.o: library.c ../include/mccinit.c \
   ../include/mui/TheBar_mcc.h private.h rev.h
 
 locale.h: locale.c
@@ -293,7 +296,8 @@ catalogs: $(CATALOGS)
 
 .PHONY: clean
 clean:
-	-$(RM) $(MCCTARGET) $(MCCTARGET).debug $(MCCOBJS) $(M68KSTUBS)
+	-$(RM) $(MCCTARGET) $(MCCTARGET).debug $(MCCTARGET).map
+	-$(RM) $(MCCOBJS) $(M68KSTUBS)
 
 .PHONY: distclean
 distclean: clean
