--- a/contrib/mui/classes/popph/popph.conf
+++ b/contrib/mui/classes/popph/popph.conf
@@ -3,24 +3,10 @@ basename      Popplaceholder
 version       15.0
 date          29.07.2007
 superclass    MUIC_Group
-classdatatype struct Popplaceholder_DATA
+classdatatype struct Popplaceholder_Data
+dispatcher    _Dispatcher
 ##end config
 
-##begin cdef
-#include <libraries/mui.h>
-#include "popplaceholder_mcc.h"
+##begin cdefprivate
 #include "popph_private.h"
-##end cdef
-
-##begin methodlist
-OM_GET
-OM_NEW
-OM_SET
-OM_DISPOSE
-MUIM_Popph_OpenAsl
-MUIM_Popph_DoCut
-MUIM_Popph_DoCopy
-MUIM_Popph_DoPaste
-MUIM_Popph_DoClear
-##end methodlist
-
+##end cdefprivate
