--- a/contrib/gfx/libs/wazp3d/Wazp3D-src/Warp3D.conf
+++ b/contrib/gfx/libs/wazp3d/Wazp3D-src/Warp3D.conf
@@ -95,4 +95,5 @@ ULONG           W3D_BindTexture(W3D_Context* context, ULONG tmu, W3D_Texture *te
 ULONG           W3D_DrawArray(W3D_Context* context, ULONG primitive, ULONG base, ULONG count)
 ULONG           W3D_DrawElements(W3D_Context* context, ULONG primitive, ULONG type, ULONG count, void *indices)
 void            W3D_SetFrontFace(W3D_Context* context, ULONG direction)
+void            W3D_Settings(void)
 ##end functionlist
