--- a/contrib/mui/classes/thebar/mcp/TheBar.conf
+++ b/contrib/mui/classes/thebar/mcp/TheBar.conf
@@ -4,7 +4,7 @@ date          29.07.2007
 copyright     Copyright (c) 2005-2007 TheBar Open Source Team
 superclass    MUIC_Group
 classdatatype struct InstData
-dispatcher    _Dispatcher
+dispatcher    _DispatcherP
 ##end config
 
 ##begin cdefprivate
