--- a/contrib/mui/classes/thebar/mcc/button/TheButton.conf
+++ b/contrib/mui/classes/thebar/mcc/button/TheButton.conf
@@ -2,7 +2,7 @@
 version       21.4
 date          29.07.2007
 copyright     Copyright (c) 2005-2007 TheBar Open Source Team
-superclass    MUIC_Mccprefs
+superclass    MUIC_Area
 classdatatype struct InstData
 dispatcher    _Dispatcher
 ##end config
