Some fixes. Build demos.
git-svn-id: https://svn.aros.org/svn/aros/trunk@27549 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/mui/classes/thebar/mcc/button/TheButton.conf
+++ b/contrib/mui/classes/thebar/mcc/button/TheButton.conf
@@ -8,12 +8,5 @@ dispatcher    _Dispatcher
 ##end config
 
 ##begin cdefprivate
-
-##include <mui/TheBar_mcc.h>
-##include <intuition/classusr.h>
-##include <graphics/text.h>
-##include <libraries/mui.h>
-
-##include "private.h"
-
+#include "private.h"
 ##end cdefprivate
