Updated to SVN rev. 136 from TheBar's own repository. Synchronized revision in *.conf files.
git-svn-id: https://svn.aros.org/svn/aros/trunk@27551 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/mui/classes/thebar/mcp/Makefile
+++ b/contrib/mui/classes/thebar/mcp/Makefile
@@ -236,7 +236,8 @@ MCCOBJS = $(OBJDIR)/library.o \
 # available catalog translations
 CATALOGS = $(LOCALE)/deutsch.catalog \
            $(LOCALE)/francais.catalog \
-			  $(LOCALE)/svenska.catalog
+			  $(LOCALE)/svenska.catalog \
+			  $(LOCALE)/czech.catalog
 
 #
 
