Made AROS port compilable again.
git-svn-id: https://svn.aros.org/svn/aros/trunk@28043 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/mui/classes/thebar/mcp/TheBar.conf
+++ b/contrib/mui/classes/thebar/mcp/TheBar.conf
@@ -1,12 +1,13 @@
 ##begin config
-version       21.5
-date          21.12.2007
-copyright     Copyright (c) 2005-2007 TheBar Open Source Team
+version       26.1
+date          02.03.2008
+copyright     Copyright (c) 2005-2008 TheBar Open Source Team
 superclass    MUIC_Mccprefs
 classdatatype struct InstData
 dispatcher    _DispatcherP
 ##end config
 
 ##begin cdefprivate
+#include "mui/TheBar_mcc.h"
 #include "private.h"
 ##end cdefprivate
