--- a/contrib/mui/classes/thebar/mcc/button/TheButton.conf
+++ b/contrib/mui/classes/thebar/mcc/button/TheButton.conf
@@ -1,12 +1,14 @@
 ##begin config
-version       21.5
-date          21.12.2007
-copyright     Copyright (c) 2005-2007 TheBar Open Source Team
+version       26.1
+date          02.03.2008
+copyright     Copyright (c) 2005-2008 TheBar Open Source Team
 superclass    MUIC_Area
 classdatatype struct InstData
 dispatcher    _Dispatcher
 ##end config
 
 ##begin cdefprivate
+#include "mui/TheBar_mcp.h"
+#include "mui/TheBar_mcc.h"
 #include "private.h"
 ##end cdefprivate
