Updated to TheBar SVN rev. 256 as preparation for a backport.
git-svn-id: https://svn.aros.org/svn/aros/trunk@28052 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/mui/classes/thebar/makefile
+++ b/contrib/mui/classes/thebar/makefile
@@ -1,47 +1,46 @@
-
 .PHONY: all
 all: button mcc mcp
 
 .PHONY: button
 button:
 	@echo "Generating TheButton.mcc..."
-	@cd mcc/button && make --no-print-directory 
-	@echo -e "Done.\n"
+	@$(MAKE) -C mcc/button --no-print-directory
+	@echo "Done."
 
 .PHONY: mcc
 mcc:
 	@ echo "Generating TheBar.mcc and TheBarVirt.mcc..."
-	@cd mcc && make --no-print-directory 
-	@echo -e "Done.\n"
+	@$(MAKE) -C mcc --no-print-directory
+	@echo "Done."
 
 .PHONY: mcp
 mcp:
 	@ echo "Generating TheBar.mcp..."
-	@cd mcp && make --no-print-directory 
-	@echo -e "Done.\n"
+	@$(MAKE) -C mcp --no-print-directory
+	@echo "Done."
 
 .PHONY: clean
 clean:
 	@echo "Cleaning..."
-	@cd mcc/button && make --no-print-directory clean 
-	@cd mcc && make --no-print-directory clean 
-	@cd mcp && make --no-print-directory clean 
-	@echo -e "Done.\n"
+	@$(MAKE) -C mcc/button --no-print-directory clean
+	@$(MAKE) -C mcc --no-print-directory clean
+	@$(MAKE) -C mcp --no-print-directory clean
+	@echo "Done."
 
 .PHONY: cleanall
 cleanall:
 	@echo "Cleaning all..."
-	@cd mcc/button && make --no-print-directory cleanall
-	@cd mcc && make --no-print-directory cleanall
-	@cd mcp && make --no-print-directory cleanall
-	@echo -e "Done.\n"
+	@$(MAKE) -C mcc/button --no-print-directory cleanall
+	@$(MAKE) -C mcc --no-print-directory cleanall
+	@$(MAKE) -C mcp --no-print-directory cleanall
+	@echo "Done."
 
 .PHONY: install
 install:
 	@echo "Installing all..."
-	@cd mcc/button && make --no-print-directory install 
-	@cd mcc && make --no-print-directory install
-	@cd mcp && make --no-print-directory install
+	@$(MAKE) -C mcc/button --no-print-directory install
+	@$(MAKE) -C mcc --no-print-directory install
+	@$(MAKE) -C mcp --no-print-directory install
 	@avail flush
-	@echo -e "Done.\n"
+	@echo "Done."
 
