Changes to get AHI working on x86-64, including: * some ULONG pointer casts changed to IPTR * added x86-64 handling in configure script * assembler macros to generate tags updated to take into account increased tag id and tag value sizes on x86-64, added new LONG32 macro replacing old LONG for a few non-tag values * changed suffixes of various AHI constants defined in ahi.h from UL to U. All of them are internally handled as ULONGs, so there's no need for them to be 64-bit on x86-64 - it's only causing havoc. U and UL are the same on 32 bits.
git-svn-id: https://svn.aros.org/svn/aros/trunk@28699 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/AHI/configure.in
+++ b/contrib/necessary/AHI/configure.in
@@ -85,6 +85,15 @@ case $host in
   resident=""                                      dnl *** Not supported (yet?)
   stripflag="--strip-unneeded"
  ;;
+ x86_64-*-aros)
+ : ${CPU="x86_64"}
+  cflags=""
+  optflags="-mcpu=k8 -O2 -fomit-frame-pointer"
+  linkerflags=""
+  asflags="--defsym CPU=${CPU} --defsym LITTLE_ENDIAN=1 --defsym x86_64=1"
+  resident=""
+  stripflag="--strip-unneeded"
+ ;;
  *)
   AC_MSG_WARN(Unknown architecture!)
  ;;
