- Compiles with gcc v2 again - Supports "Hidden" ISO9660 flag - Hides files with "Associated" ISO9660 flag set
git-svn-id: https://svn.aros.org/svn/aros/trunk@28899 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/CDVDFS/src/GNUmakefile
+++ b/contrib/necessary/CDVDFS/src/GNUmakefile
@@ -54,7 +54,7 @@ all:		cdrom-handler cdrom cdcontrol checkcd $(KILLDEV)
 
 cdrom-handler:	$(OBJS1)
 		$(CC) $(LDFLAGS1) -o $@ $(OBJS1) $(LDLIBS1) $(DEBUGLIBS)
-#		 $(STRIP) $@
+		$(STRIP) $@
 		$(NOEXEC) $@
 
 cdrom:		$(OBJS2)
