- Files opened with MODE_OLDFILE can now be written to.  - Fixed null-pointer accesses that occurred when a notification reply was    received after EndNotify() had been called.  - Fixed bugs related to reading and writing a file at the same time.  - Files that are protected from deletion can no longer be overwritten with    a new file of the same name.  - Now returns a value (NULL) from resident init function.
git-svn-id: https://svn.aros.org/svn/aros/trunk@29172 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/AmberRAM/Makefile
+++ b/contrib/necessary/AmberRAM/Makefile
@@ -9,7 +9,7 @@ LINKER = ld -e _Main -s
 AMIGA_LIB = GG:lib/libamiga.a
 
 HANDLER = amber-ram-handler
-OBJS = handler.o commands.o filesystem.o notification.o support.o
+OBJS = resident.o handler.o commands.o filesystem.o notification.o support.o
 HDRS = handler.h handler_protos.h
 STARTUP = startup.o
 
@@ -20,7 +20,7 @@ $(HANDLER): $(STARTUP) $(MAKEFILE) $(OBJS)
 	$(LINKER) $(STARTUP) $(OBJS) $(AMIGA_LIB) -o $(HANDLER)
 	Protect "$(HANDLER)" -e
 
-$(OBJS): $(MAKEFILE) $(HDRS)
+$(OBJS) $(STARTUP): $(MAKEFILE) $(HDRS)
 
 install: $(HANDLER)
 	Copy CLONE "$(HANDLER)" "L:"
