--- a/contrib/Networking/Drivers/rtl8139/rtl8139.conf
+++ b/contrib/Networking/Drivers/rtl8139/rtl8139.conf
@@ -1,8 +1,10 @@
 ##begin config
-version 1.0
+version 0.90
 basename RTL8139Dev
 libbase RTL8139DeviceBase
 libbasetype struct RTL8139Base
+sysbase_field rtl8139b_SysBase
+seglist_field rtl8139b_SegList
 residentpri -60
 beginio_func beginio
 abortio_func abortio
