--- a/contrib/Networking/Drivers/rtl8139/rtl8139.conf
+++ b/contrib/Networking/Drivers/rtl8139/rtl8139.conf
@@ -6,8 +6,8 @@ libbasetype struct RTL8139Base
 sysbase_field rtl8139b_SysBase
 seglist_field rtl8139b_SegList
 residentpri -60
-beginio_func beginio
-abortio_func abortio
+beginio_func BeginIO
+abortio_func AbortIO
 ##end config
 ##begin cdefprivate
 #include "rtl8139.h"
