--- a/contrib/Networking/Stacks/AROSTCP/MUI.MiamiPanel/MUI.MiamiPanel.conf
+++ b/contrib/Networking/Stacks/AROSTCP/MUI.MiamiPanel/MUI.MiamiPanel.conf
@@ -3,7 +3,7 @@ basename MiamiPanel
 libbase MiamiPanelBase
 libbasetype struct MiamiPanelBase_intern
 version 4.51
-options noincludes
+options noincludes, nostubs, noautoinit
 ##end config
 ##begin cdef
 #include "muimiamipanel_intern.h"
