--- a/contrib/necessary/USB/classes/MassStorage/storage.conf
+++ b/contrib/necessary/USB/classes/MassStorage/storage.conf
@@ -6,7 +6,7 @@ classptr_field  sd.mssClass
 classid         CLID_Hidd_USBStorage
 superclass      CLID_Hidd_USBDevice
 classdatatype   StorageData
-copyright       Copyright (C) 2006 by Michal Schulz
+copyright       Copyright (C) 2008 by Michal Schulz
 residentpri     -122
 initpri     1
 ##end config
@@ -25,6 +25,8 @@ Dispose
 .interface Hidd_USBStorage
 Reset
 GetMaxLUN
+TestUnitReady
+RequestSense
 DirectSCSI
 Read
 Write
